--- a/front-end/src/utils/CSS/Login.css
+++ b/front-end/src/utils/CSS/Login.css
@@ -8,6 +8,9 @@ html {
   padding: 0;
   box-sizing: border-box;
   background: rgb(236, 236, 236);
+  width: 100%;
+  height: 100%;
+  overflow: hidden; 
 }
 .logo {
   display: flex;
