--- a/front-end/src/utils/CSS/Login.css
+++ b/front-end/src/utils/CSS/Login.css
@@ -3,7 +3,7 @@
   font-family: "Roboto", sans-serif;
 }
 body,
-html {
+html, #root {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -15,16 +15,16 @@ html {
 .logo {
   display: flex;
   justify-content: center;
-  margin-top: 60px;
 }
 .logo img {
   width: 178px;
+  margin: 30px;
 }
 header {
   width: 100%;
   text-align: center;
 }
-.bar nav a {
+.menu nav a {
   text-decoration: none;
 }
 .link {
@@ -45,7 +45,7 @@ nav {
   top: 60px;
 }
 
-.bar {
+.menu {
   background: #1c5594;
   width: 350px;
   left: -350px;
@@ -53,7 +53,7 @@ nav {
   position: absolute;
   transition: all 0.2s linear;
 }
-.bar nav {
+.menu nav {
   color: black;
 }
 #check {
@@ -73,22 +73,10 @@ label i {
   margin: 8px;
 }
 
-#check:checked ~ .bar {
+#check:checked ~ .menu {
   transform: translateX(350px);
 }
 
-.navBar {
-  background: #fff;
-  width: 100%;
-  height: 34px;
-  box-shadow: 0 3px 0 0 #e98118;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  justify-content: flex-end;
-  padding: 0.5em;
-  position: absolute;
-}
 div.redes-sociais img {
   width: 20px;
   margin-right: 17px;
@@ -101,7 +89,7 @@ div.redes-sociais img {
   border: none;
   border-radius: 10px;
   background: #f7941e;
-  color: #fff;
+  color: white;
   font-size: 1.3rem;
   margin-top: 1rem;
   outline: none;
@@ -109,14 +97,15 @@ div.redes-sociais img {
 
 .formLogin {
   width: 100%;
-  height: 395px;
+  height: 100%;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  margin-top: -40px;
 }
 .formLogin form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   text-align: center;
   align-items: center;
 }
@@ -165,13 +154,28 @@ div.redes-sociais img {
     width: 30px;
   }
 }
+
 @media screen and (max-width: 375px) {
+  .menu {
+    width: 100%;
+    left: -400px;
+  }
+  #check:checked ~ .menu {
+    transform: translateX(400px);
+  }
   .login span {
     margin-left: 8px;
   }
-}
-@media screen and (max-width: 375px) {
   .formLogin form input {
     width: 200px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .menu {
+    width: 100%;
+    left: -425px;
+  }
+  #check:checked ~ .menu {
+    transform: translateX(425px);
   }
 }
