--- a/front-end-layout/Cadastro/css/style.css
+++ b/front-end-layout/Cadastro/css/style.css
@@ -74,25 +74,6 @@ nav {
   top: 60px;
   overflow: hidden;
 }
-/* Barra de navegação */
-
-/* CORPO */
-.conteudo {
-  margin-top: 40px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.conteudo .card {
-  width: 18rem;
-  margin: 20px;
-  align-items: center;
-}
-.conteudo .card img {
-  width: 99%;
-  margin: 2px;
-}
 .profileI {
   display: flex;
   width: 100%;
@@ -119,6 +100,26 @@ nav {
   text-align: center;
   height: 30px;
 }
+.registerBox {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 800px;
+  justify-content: center;
+}
+.registerBox form {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: 500px;
+  align-items: center;
+}
+.registerBox form input {
+  width: 200px;
+
+  /* flex-direction: column; */
+}
+/* Barra de navegação */
 
 /* Search bar */
 /* Responsive Queries */
@@ -136,33 +137,18 @@ nav {
   * {
     overflow: visible;
   }
-  .conteudo {
-    flex-wrap: wrap;
-  }
-  .conteudo .card {
-    width: 14rem;
-    margin: 15px auto;
-    flex-wrap: wrap;
-  }
 }
 
 @media screen and (max-width: 425px) {
-  * {
-    overflow: visible;
-  }
-  .conteudo {
-    flex-direction: column;
-  }
-  .conteudo .card {
-    width: 20rem;
-    margin: 15px auto;
-  }
   .menu {
     width: 100%;
     left: -425px;
   }
   #check:checked ~ .menu {
     transform: translateX(425px);
+  }
+  * {
+    overflow: visible;
   }
 }
 @media screen and (max-width: 375px) {
@@ -172,19 +158,6 @@ nav {
   }
   #check:checked ~ .menu {
     transform: translateX(400px);
-  }
-  .login span {
-    margin-left: 8px;
-  }
-  .formLogin form input {
-    width: 200px;
-  }
-  .conteudo {
-    flex-direction: column;
-  }
-  .conteudo .card {
-    width: 17rem;
-    margin: 15px auto;
   }
   * {
     overflow: visible;
