--- a/front-end-layout/Cadastro/css/style.css
+++ b/front-end-layout/Cadastro/css/style.css
@@ -40,9 +40,10 @@ html {
 #check {
   display: none;
 }
+
 label i {
   cursor: pointer;
-  padding: 12px;
+  padding: 10px;
   position: absolute;
   z-index: 2;
 }
@@ -86,8 +87,9 @@ nav {
   margin: 0 auto;
   width: 120px;
   height: 120px;
-  border-radius: 6em;
-  background: white;
+  box-shadow: 0 3px 0 0 #f7941e;
+  background: #eee8e8;
+  margin-bottom: 5px;
 }
 
 .profileI input {
@@ -100,25 +102,65 @@ nav {
   text-align: center;
   height: 30px;
 }
-.registerBox {
+.registerMainBox {
   display: flex;
-  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 800px;
-  justify-content: center;
-}
-.registerBox form {
-  display: flex;
-  flex-direction: column;
-  width: 400px;
-  height: 500px;
   align-items: center;
 }
-.registerBox form input {
-  width: 200px;
-
-  /* flex-direction: column; */
+.registerMainBox .registerSecondaryBox {
+  text-align: center;
+  font-size: 1.2em;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  width: 500px;
+  height: 600px;
+  background: #d8d8d8;
+  border: solid rgb(197, 195, 195) 0.06em;
 }
+.registerMainBox .registerSecondaryBox .boxBar {
+  width: 100%;
+  height: 50px;
+  background: #f78b1f;
+}
+.registerMainBox .registerSecondaryBox form {
+  align-items: center;
+  flex-direction: column;
+  display: flex;
+  background: rgb(245, 244, 244);
+  width: 100%;
+  height: 100%;
+}
+.registerMainBox .registerSecondaryBox form .label input {
+  height: 30px;
+  width: 300px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  outline: none;
+  border: solid 1px #c1c1c1;
+  text-align: center;
+}
+.registerMainBox .registerSecondaryBox form .label {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  color: rgb(90, 90, 90);
+}
+.registerMainBox .registerSecondaryBox form .label span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(245, 244, 244);
+  padding: 0 0.6rem;
+  height: 30px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border: solid 1px #c1c1c1;
+}
+
 /* Barra de navegação */
 
 /* Search bar */
