--- a/front-end/src/utils/CSS/Login.css
+++ b/front-end/src/utils/CSS/Login.css
@@ -1,147 +1,229 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 * {
   font-family: "Roboto", sans-serif;
+  overflow: hidden;
 }
-body,
-html, #root {
+/* Corpo */
+body {
+  background: rgb(255, 255, 255) !important ;
+}
+html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: rgb(230, 227, 227);
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
 }
-.logo {
+/* Logo */
+.logasso {
   display: flex;
   justify-content: center;
+  margin-top: 20px;
 }
 .logo img {
-  width: 178px;
-  margin: 30px;
+  width: 170px;
 }
-header {
+/* Opções profile do menu */
+
+.options {
+  position: relative;
+  top: 37px;
+  align-items: center;
+  display: flex;
   width: 100%;
+  height: 480px;
+  margin-top: -40px;
+}
+.optionsProfile {
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  display: flex;
+  width: 100%;
+  height: 400px;
+}
+.optionsProfile a {
+  text-decoration: none;
+  color: black;
+  margin: 10px;
+}
+.optionsProfile img {
+  width: 30px;
+  margin-right: 10px;
+}
+.sociais {
+  position: relative;
+  top: 50px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  width: 100%;
+  height: 50px;
+}
+.profileUI {
+  cursor: pointer;
+  border-left: solid 0.2em #f58a1f;
+  margin: 5px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  width: 100%;
+  height: 60px;
+}
+.profileUI:hover {
+  background: rgb(228, 228, 228);
+  transition: all 0.2s linear;
+  border-left: solid 0.25em #1c5594;
+}
+.profileI {
+  margin-left: -210px;
+  background: #f58a1f;
+  border-top-right-radius: 6000em;
+  border-bottom-right-radius: 6000em;
+  display: flex;
+  width: 100%;
+  height: 130px;
+  color: white;
+  align-items: center;
+  justify-content: flex-end;
+  position: relative;
+  top: 30px;
+}
+.profileI section {
+  cursor: pointer;
+  background: url(../IMG/avatar.jpg);
+  background-size: cover;
   text-align: center;
+  margin: 5px;
+  border-radius: 4em;
+  width: 120px;
+  height: 120px;
+  margin-bottom: 5px;
+}
+
+.logout:hover {
+  background: rgb(228, 228, 228);
+  transition: all 0.2s linear;
+  border-left: solid 0.25em #1c5594;
+}
+.logout {
+  border-left: solid 0.2em #f58a1f;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 60px;
+  bottom: 0px;
+}
+.logout img {
+  width: 30px;
+  margin-right: 10px;
+}
+.logout a,
+.logout a:hover {
+  color: black;
+  text-decoration: none;
+}
+/* BARRA DE MENU */
+.menu {
+  background: rgb(248, 248, 248);
+  width: 350px;
+  top: 0px;
+  left: -350px;
+  height: 100%;
+  position: absolute;
+  transition: all 0.3s ease-in-out;
+  z-index: 999;
 }
 .menu nav a {
   text-decoration: none;
 }
-.link {
-  text-align: center;
-  padding: 20px;
-  font-size: 15px;
-  transition: all 0.2s linear;
-  color: black;
-  text-decoration: none;
-}
-.link:hover {
-  background: rgb(238, 232, 232);
-}
-
-nav {
-  width: 100%;
-  position: absolute;
-  top: 60px;
-}
-
-.menu {
-  background: #1c5594;
-  width: 350px;
-  left: -350px;
-  height: 100%;
-  position: absolute;
-  transition: all 0.2s linear;
-}
-.menu nav {
+.menu nav a:hover {
   color: black;
 }
 #check {
   display: none;
 }
+
 label i {
+  transition: all 0.1s linear;
+  margin-left: 8px;
+  border-radius: 2em;
+  background: #f58a1f;
+  color: rgb(255, 255, 255);
   cursor: pointer;
   padding: 12px;
   position: absolute;
-  z-index: 1;
-}
-
-.link {
-  background: white;
-  padding: 18px;
-  transition: all 0.2s linear;
-  margin: 8px;
+  z-index: 1000;
 }
 
 #check:checked ~ .menu {
   transform: translateX(350px);
 }
-
-div.redes-sociais img {
-  width: 20px;
-  margin-right: 17px;
+#check:checked ~ label i {
+  transition: all 0.1s linear;
+  background: black;
 }
 
-.btn-entrar {
-  margin-top: 0.5rem;
-  width: 10rem;
-  height: 2rem;
-  border: none;
-  border-radius: 10px;
-  background: #f7941e;
-  color: white;
-  font-size: 1.3rem;
-  margin-top: 1rem;
-  outline: none;
-}
-
-.formLogin {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  margin-top: -40px;
-}
-.formLogin form {
-  display: flex;
-  flex-direction: column;
+.link {
   text-align: center;
-  align-items: center;
+  padding: 20px;
+  font-size: 15px;
+  transition: all 0.2s ease-in-out;
+  color: black;
+  text-decoration: none;
+  background: white;
+  padding: 18px;
+  margin: 8px;
+}
+.link:hover {
+  background: rgb(238, 232, 232);
+}
+nav {
+  width: 100%;
+  position: absolute;
+  top: 60px;
+  overflow: hidden;
 }
 
-.formLogin form label {
-  font-size: 22px;
-}
-
-.formLogin form input {
-  padding: 10px 10px 10px 20px;
-  width: 300px;
-  text-align: left;
-  background: rgb(255, 255, 255);
-  outline: none;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border: none;
-  border: solid 1px #c1c1c1;
-}
-
-.login {
+/* CONTEÚDO */
+.conteudo {
   display: flex;
-  padding: 8px;
+  margin: 0 auto;
+  width: 100%;
+  justify-content: center;
 }
-
-.login span {
+.list-group .list-group-item,
+.card-body {
+  background: rgb(248, 248, 248);
+}
+.card-body {
+  text-align: center;
+}
+.card {
+  margin: 38px auto;
+  width: 40%;
+  height: 400px;
+}
+.btnLogin {
+  align-items: center;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background: white;
-  padding: 0 0.8rem;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  border: solid 1px #c1c1c1;
+  width: 100%;
+  height: 50px;
 }
-
+.btnLogin a {
+  color: white;
+  font-size: 1.2em;
+  padding: 8px;
+  box-shadow: 0 0 1px 0 black;
+  text-align: center;
+  width: 200px;
+  background: #f5941e;
+}
+.btnLogin a:hover {
+  text-decoration: none;
+}
 /* Responsive Queries */
 @media screen and (max-width: 768px) {
   .navBar {
@@ -153,29 +235,64 @@ div.redes-sociais img {
   .navBar img {
     width: 30px;
   }
+  * {
+    overflow: visible;
+  }
 }
 
-@media screen and (max-width: 375px) {
-  .menu {
-    width: 100%;
-    left: -400px;
-  }
-  #check:checked ~ .menu {
-    transform: translateX(400px);
-  }
-  .login span {
-    margin-left: 8px;
-  }
-  .formLogin form input {
-    width: 200px;
-  }
-}
 @media screen and (max-width: 425px) {
+  * {
+    overflow: visible;
+  }
+  .card {
+    width: 75%;
+  }
   .menu {
     width: 100%;
     left: -425px;
   }
   #check:checked ~ .menu {
     transform: translateX(425px);
+  }
+}
+@media screen and (max-width: 375px) {
+  .optionsProfile {
+    position: relative;
+    top: -60px;
+  }
+  .menu {
+    width: 100%;
+    left: -400px;
+  }
+  .card {
+    width: 75%;
+  }
+  #check:checked ~ .menu {
+    transform: translateX(400px);
+  }
+
+  * {
+    overflow: visible;
+  }
+}
+@media screen and (max-width: 320px) {
+  .options {
+    height: 300px;
+  }
+  .profileI {
+    height: 150px;
+    background: none;
+    display: flex;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    margin-left: 0;
+    justify-content: center;
+    align-items: center;
+  }
+  .profileI section {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    top: -45px;
   }
 }
