--- a/front-end-layout/Principal/css/style.css
+++ b/front-end-layout/Principal/css/style.css
@@ -5,7 +5,7 @@
 }
 /* Corpo */
 body {
-  background: rgb(255, 255, 255) !important ;
+  background: rgb(253, 253, 253) !important ;
 }
 html {
   margin: 0;
@@ -22,7 +22,12 @@ html {
   width: 170px;
 }
 /* Opções profile do menu */
-
+.open {
+  transform: translateX(350px);
+}
+.overflowhidden {
+  overflow: hidden;
+}
 .options {
   position: relative;
   top: 37px;
@@ -126,7 +131,7 @@ html {
 }
 /* BARRA DE MENU */
 .menu {
-  background: rgb(248, 248, 248);
+  background: rgb(240, 240, 240);
   width: 350px;
   top: 0px;
   left: -350px;
@@ -157,14 +162,6 @@ label i {
   z-index: 1000;
 }
 
-#check:checked ~ .menu {
-  transform: translateX(350px);
-}
-#check:checked ~ label i {
-  transition: all 0.1s linear;
-  background: black;
-}
-
 .link {
   text-align: center;
   padding: 20px;
@@ -193,39 +190,126 @@ nav {
   width: 100%;
   justify-content: center;
 }
-.list-group .list-group-item,
-.card-body {
-  background: rgb(248, 248, 248);
-}
-.card-body {
-  text-align: center;
-}
 .card {
-  margin: 38px auto;
-  width: 40%;
-  height: 400px;
+  width: 400px;
+  margin: 3em auto;
 }
-.btnLogin {
+
+.carousel-indicators .active {
+  background-color: rgba(5, 5, 5, 0.5) !important;
+}
+.carousel-indicators li {
+  background-color: rgba(121, 121, 121, 0.5) !important;
+}
+.carousel-control-next-icon {
+  display: none !important;
+}
+.carousel-control-prev-icon {
+  display: none !important;
+}
+.carousel-control-next,
+.carousel-control-prev {
+  display: none !important;
+}
+.morecourses {
+  text-decoration: none;
+  color: white !important;
+}
+.card-body {
+  justify-content: center;
   align-items: center;
   display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 50px;
-}
-.btnLogin a {
-  color: white;
-  font-size: 1.2em;
-  padding: 8px;
-  box-shadow: 0 0 1px 0 black;
   text-align: center;
-  width: 200px;
-  background: #f5941e;
+  height: 50px;
+  padding: 0 !important;
 }
-.btnLogin a:hover {
-  text-decoration: none;
+.menuMobile button {
+  visibility: hidden;
 }
+.menuMobile .menuMoptions div img {
+  visibility: hidden;
+}
+.menuLogin {
+  display: none;
+}
+
 /* Responsive Queries */
 @media screen and (max-width: 768px) {
+  .btn{
+    width: 100%;
+  }
+  .formLogin{
+    display: none;
+  }
+  .showFormLogin{
+    display: block;
+    margin-top: 20px;
+  }
+  .carousel{
+    z-index: 1;
+  }
+  .menuMobile {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    justify-content: center;
+    z-index: 8;
+    transition: all 0.5s ease-in-out;
+  }
+  .menuMobile .menuMoptions {
+    transition: all 0.5s ease-in-out;
+    align-items: center;
+    flex-direction: column;
+    border-bottom-left-radius: 1.5em;
+    border-bottom-right-radius: 1.5em;
+    border-top-right-radius: 7px;
+    border-top-left-radius: 7px;
+    width: 95%;
+    height: 61px;
+    background: rgb(236, 236, 236);
+    display: flex;
+  }
+  .openMenuLogin{ 
+    transition: all 1s ease-in-out;
+    height: 460px !important;
+  }
+  .openMenuLogin2{
+    height: 470px;
+    z-index: 10;
+  }
+
+  .menuMobile .menuMoptions .buttonShowLogin {
+    z-index: 999;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    position: relative;
+    top: -30px;
+    width: 60px;
+    height: 60px;
+    background: white;
+    border-radius: 10em;
+  }
+  .menuMobile .menuMoptions .buttonShowLogin a {
+    display: block;
+  }
+  .menuMobile .menuMoptions .buttonShowLogin img {
+    visibility: visible;
+    margin: 0 auto;
+    width: 55%;
+    animation: scale-up-center 2s ease-in-out 1000ms infinite alternate-reverse both;
+  }
+  @keyframes scale-up-center {
+    0% {
+      transform: scale(0.8);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
   .navBar {
     width: 100%;
     height: 4%;
@@ -235,27 +319,46 @@ nav {
   .navBar img {
     width: 30px;
   }
+  .card {
+    width: 270px;
+  }
   * {
     overflow: visible;
   }
 }
 
 @media screen and (max-width: 425px) {
+  .openMenuLogin{ 
+    transition: all 1s ease-in-out;
+    height: 540px !important;
+  }
+  .openMenuLogin2{
+    height: 550px;
+    z-index: 10;
+  }
   * {
     overflow: visible;
   }
-  .card {
-    width: 75%;
+  .logo img {
+    width: 120px;
   }
   .menu {
     width: 100%;
     left: -425px;
   }
-  #check:checked ~ .menu {
+  .open {
     transform: translateX(425px);
   }
 }
 @media screen and (max-width: 375px) {
+  .openMenuLogin{ 
+    transition: all 1s ease-in-out;
+    height: 490px !important;
+  }
+  .openMenuLogin2{
+    height: 500px;
+    z-index: 10;
+  }
   .optionsProfile {
     position: relative;
     top: -60px;
@@ -264,18 +367,27 @@ nav {
     width: 100%;
     left: -400px;
   }
-  .card {
-    width: 75%;
-  }
-  #check:checked ~ .menu {
+  .open {
     transform: translateX(400px);
   }
-
   * {
     overflow: visible;
   }
 }
+
 @media screen and (max-width: 320px) {
+  .carousel {
+    margin-top: -30px;
+    position: relative;
+}
+  .openMenuLogin{ 
+    transition: all 1s ease-in-out;
+    height: 390px !important;
+  }
+  .openMenuLogin2{
+    height: 400px;
+    z-index: 10;
+  }
   .options {
     height: 300px;
   }
